# ipc

./: CMakeLists.txt  base_socket.hpp  client.cpp  client.h  main.cpp  server.cpp  server.h
